<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.adminPanel"
    android:background="@color/background">

    <!-- Шапка -->
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/txt_header"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        android:textStyle="bold" />

    <!-- Лейаут для полей ввода и кнопок -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_below="@id/header"
        android:orientation="vertical">

        <Button
            android:id="@+id/insertUser_button"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:layout_marginEnd="0dp"
            android:paddingStart="16dp"
            android:paddingEnd="20dp"
            android:onClick="insertUser"
            android:text="@string/btn_insertUser"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:backgroundTint="@color/header"
            app:cornerRadius="30sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/editUser_button"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:layout_marginEnd="0dp"
            android:paddingStart="16dp"
            android:paddingEnd="20dp"
            android:onClick="editUser"
            android:text="@string/btn_editUser"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:backgroundTint="@color/header"
            app:cornerRadius="30sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/deleteUser_button"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:layout_marginEnd="0dp"
            android:paddingStart="16dp"
            android:onClick="deleteUser"
            android:paddingEnd="20dp"
            android:text="@string/btn_deleteUser"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:backgroundTint="@color/header"
            app:cornerRadius="30sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:layout_marginTop="280dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="0dp"
            android:paddingStart="16dp"
            android:paddingEnd="20dp"
            android:text="@string/btn_exit"
            android:textColor="#FFFFFF"
            android:onClick="goBack"
            android:textSize="17sp"
            app:backgroundTint="@color/header"
            app:cornerRadius="30sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</RelativeLayout>