<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activities.ZnpActivity">

    <!-- Шапка -->
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/txt_header"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/txt_znp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Лейаут для полей ввода и кнопок -->
    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_centerInParent="true"
        android:layout_marginTop="120dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/TC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TC:"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spinnerTC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TC"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Вид запроса:"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/Ceh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/role"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="#D9D9D9"
            android:gravity="center"
            android:hint="@string/txt_Ceh"
            android:inputType="text"
            android:minHeight="65dp"
            android:textColorHint="#6E6E6E"
            android:textSize="21sp" />

        <EditText
            android:id="@+id/Sklad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Ceh"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="#D9D9D9"
            android:gravity="center"
            android:hint="@string/txt_Sklad"
            android:inputType="text"
            android:minHeight="65dp"
            android:textColorHint="#6E6E6E"
            android:textSize="21sp" />




        <!-- Кнопки Войти и Отмена -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Sklad"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/pieces_button"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/txt_pieces"
                android:textColor="#FFFFFF"
                android:onClick="ShowPieces"
                android:textSize="21sp"
                app:backgroundTint="@color/header"
                app:cornerRadius="30sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/insert_button"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="50dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/txt_confirm"
                android:onClick="ConfirmZnP"
                android:textColor="#FFFFFF"
                android:textSize="21sp"
                app:backgroundTint="@color/header"
                app:cornerRadius="30sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/btn_cancel"
                android:textColor="#FFFFFF"
                android:onClick="cancel"
                android:textSize="21sp"
                app:backgroundTint="@color/header"
                app:cornerRadius="30sp"
                tools:ignore="TextContrastCheck" />




        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>