<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.OrdersActivity"
    android:background="@color/background">

    <!-- Шапка -->
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/txt_header"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/btn_znp"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold" />

    <!-- Лейаут для полей ввода и кнопок -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_below="@id/header"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:onClick="goBack"
            android:paddingStart="16dp"
            android:paddingEnd="20dp"
            android:text="@string/btn_back"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:backgroundTint="@color/header"
            app:cornerRadius="30sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</RelativeLayout>
