<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.IsolationActivity"
    android:background="@color/background">

    <!-- Шапка -->
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/txt_header"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/txt_pieces"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold" />

    <!-- Лейаут для полей ввода и кнопок -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_text"
        android:layout_above="@+id/btn_layout">

        <ListView
            android:id="@+id/lvPieces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:choiceMode="multipleChoice"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">



        <Button
            android:id="@+id/login_button"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="goBack"
            android:paddingStart="16dp"
            android:paddingEnd="20dp"
            android:text="@string/btn_back"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:backgroundTint="@color/header"
            app:cornerRadius="30sp"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

</RelativeLayout>
